--- a/patches/ref_omap2plus_defconfig
+++ b/patches/ref_omap2plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 6.9.5 Kernel Configuration
+# Linux/arm 6.10.0-rc4 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabi-gcc (GCC) 13.2.0"
 CONFIG_CC_IS_GCC=y
@@ -113,7 +113,7 @@ CONFIG_PREEMPT_NONE=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
-CONFIG_SCHED_THERMAL_PRESSURE=y
+CONFIG_SCHED_HW_PRESSURE=y
 CONFIG_BSD_PROCESS_ACCT=y
 # CONFIG_BSD_PROCESS_ACCT_V3 is not set
 # CONFIG_TASKSTATS is not set
@@ -129,6 +129,7 @@ CONFIG_TREE_RCU=y
 # CONFIG_RCU_EXPERT is not set
 CONFIG_TREE_SRCU=y
 CONFIG_NEED_SRCU_NMI_SAFE=y
+CONFIG_NEED_TASKS_RCU=y
 CONFIG_RCU_STALL_COMMON=y
 CONFIG_RCU_NEED_SEGCBLIST=y
 # end of RCU Subsystem
@@ -151,6 +152,7 @@ CONFIG_GCC10_NO_ARRAY_BOUNDS=y
 CONFIG_CC_NO_ARRAY_BOUNDS=y
 CONFIG_GCC_NO_STRINGOP_OVERFLOW=y
 CONFIG_CC_NO_STRINGOP_OVERFLOW=y
+CONFIG_SLAB_OBJ_EXT=y
 CONFIG_CGROUPS=y
 CONFIG_PAGE_COUNTER=y
 # CONFIG_CGROUP_FAVOR_DYNMODS is not set
@@ -210,7 +212,7 @@ CONFIG_POSIX_TIMERS=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
-CONFIG_BASE_FULL=y
+# CONFIG_BASE_SMALL is not set
 CONFIG_FUTEX=y
 CONFIG_FUTEX_PI=y
 CONFIG_EPOLL=y
@@ -511,6 +513,7 @@ CONFIG_ARCH_FLATMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_HIGHMEM=y
 CONFIG_HIGHPTE=y
+CONFIG_ARM_PAN=y
 CONFIG_CPU_SW_DOMAIN_PAN=y
 CONFIG_HW_PERF_EVENTS=y
 CONFIG_ARM_MODULE_PLTS=y
@@ -691,6 +694,7 @@ CONFIG_HAVE_STACKPROTECTOR=y
 CONFIG_STACKPROTECTOR=y
 CONFIG_STACKPROTECTOR_STRONG=y
 CONFIG_LTO_NONE=y
+CONFIG_ARCH_SUPPORTS_CFI_CLANG=y
 CONFIG_HAVE_CONTEXT_TRACKING_USER=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -739,7 +743,6 @@ CONFIG_FUNCTION_ALIGNMENT=0
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
-CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
 # CONFIG_MODULE_DEBUG is not set
 CONFIG_MODULE_FORCE_LOAD=y
@@ -903,6 +906,7 @@ CONFIG_MEMFD_CREATE=y
 CONFIG_ARCH_SUPPORTS_PER_VMA_LOCK=y
 CONFIG_PER_VMA_LOCK=y
 CONFIG_LOCK_MM_AND_FIND_VMA=y
+CONFIG_EXECMEM=y
 
 #
 # Data Access Monitoring
@@ -1434,6 +1438,7 @@ CONFIG_BT_MRVL_SDIO=m
 # CONFIG_BT_MTKUART is not set
 # CONFIG_BT_VIRTIO is not set
 # CONFIG_BT_NXPUART is not set
+# CONFIG_BT_INTEL_PCIE is not set
 # end of Bluetooth device drivers
 
 CONFIG_AF_RXRPC=m
@@ -2140,6 +2145,7 @@ CONFIG_NET_CORE=y
 # CONFIG_GENEVE is not set
 # CONFIG_BAREUDP is not set
 # CONFIG_GTP is not set
+# CONFIG_PFCP is not set
 # CONFIG_AMT is not set
 # CONFIG_MACSEC is not set
 # CONFIG_NETCONSOLE is not set
@@ -2328,6 +2334,7 @@ CONFIG_FIXED_PHY=y
 #
 # MII PHY device drivers
 #
+# CONFIG_AIR_EN8811H_PHY is not set
 # CONFIG_AMD_PHY is not set
 # CONFIG_ADIN_PHY is not set
 # CONFIG_ADIN1100_PHY is not set
@@ -3046,7 +3053,6 @@ CONFIG_SPI_GPIO=m
 CONFIG_SPI_OMAP24XX=y
 CONFIG_SPI_TI_QSPI=m
 # CONFIG_SPI_PCI1XXXX is not set
-# CONFIG_SPI_PXA2XX is not set
 # CONFIG_SPI_SC18IS602 is not set
 # CONFIG_SPI_SIFIVE is not set
 # CONFIG_SPI_SN_F_OSPI is not set
@@ -4488,11 +4494,11 @@ CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_FBDEV_OVERALLOC=100
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 # CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
-CONFIG_DRM_DP_AUX_BUS=m
 CONFIG_DRM_DISPLAY_HELPER=m
+CONFIG_DRM_DISPLAY_DP_AUX_BUS=m
+# CONFIG_DRM_DISPLAY_DP_AUX_CEC is not set
+# CONFIG_DRM_DISPLAY_DP_AUX_CHARDEV is not set
 CONFIG_DRM_DISPLAY_DP_HELPER=y
-# CONFIG_DRM_DP_AUX_CHARDEV is not set
-# CONFIG_DRM_DP_CEC is not set
 CONFIG_DRM_GEM_DMA_HELPER=m
 
 #
@@ -4577,6 +4583,7 @@ CONFIG_DRM_PANEL_DSI_CM=m
 # CONFIG_DRM_PANEL_LEADTEK_LTK500HD1829 is not set
 CONFIG_DRM_PANEL_LG_LB035Q02=m
 # CONFIG_DRM_PANEL_LG_LG4573 is not set
+# CONFIG_DRM_PANEL_LG_SW43408 is not set
 # CONFIG_DRM_PANEL_MAGNACHIP_D53E6EA8966 is not set
 # CONFIG_DRM_PANEL_MANTIX_MLAF057WE51 is not set
 CONFIG_DRM_PANEL_NEC_NL8048HL11=m
@@ -4598,11 +4605,13 @@ CONFIG_DRM_PANEL_NEC_NL8048HL11=m
 # CONFIG_DRM_PANEL_RAYDIUM_RM67191 is not set
 # CONFIG_DRM_PANEL_RAYDIUM_RM68200 is not set
 # CONFIG_DRM_PANEL_RAYDIUM_RM692E5 is not set
+# CONFIG_DRM_PANEL_RAYDIUM_RM69380 is not set
 # CONFIG_DRM_PANEL_RONBO_RB070D30 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E88A0_AMS452EF01 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_ATNA33XC20 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_DB7430 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_LD9040 is not set
+# CONFIG_DRM_PANEL_SAMSUNG_S6E3FA7 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6D16D0 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6D27A1 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6D7AA0 is not set
@@ -4707,6 +4716,7 @@ CONFIG_DRM_TI_TPD12S015=m
 # CONFIG_DRM_TIDSS is not set
 # CONFIG_DRM_GUD is not set
 # CONFIG_DRM_SSD130X is not set
+# CONFIG_DRM_WERROR is not set
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=m
 
 #
@@ -5088,7 +5098,6 @@ CONFIG_SND_SOC_HDMI_CODEC=m
 # CONFIG_SND_SOC_HDA is not set
 # CONFIG_SND_SOC_ICS43432 is not set
 # CONFIG_SND_SOC_IDT821034 is not set
-# CONFIG_SND_SOC_INNO_RK3036 is not set
 # CONFIG_SND_SOC_MAX98088 is not set
 # CONFIG_SND_SOC_MAX98090 is not set
 # CONFIG_SND_SOC_MAX98357A is not set
@@ -5115,8 +5124,8 @@ CONFIG_SND_SOC_HDMI_CODEC=m
 # CONFIG_SND_SOC_PCM5102A is not set
 # CONFIG_SND_SOC_PCM512x_I2C is not set
 # CONFIG_SND_SOC_PCM512x_SPI is not set
+# CONFIG_SND_SOC_PCM6240 is not set
 # CONFIG_SND_SOC_PEB2466 is not set
-# CONFIG_SND_SOC_RK3328 is not set
 # CONFIG_SND_SOC_RT5616 is not set
 # CONFIG_SND_SOC_RT5631 is not set
 # CONFIG_SND_SOC_RT5640 is not set
@@ -5324,6 +5333,7 @@ CONFIG_HID_GENERIC=m
 # CONFIG_HID_U2FZERO is not set
 # CONFIG_HID_WACOM is not set
 # CONFIG_HID_WIIMOTE is not set
+# CONFIG_HID_WINWING is not set
 # CONFIG_HID_XINMO is not set
 # CONFIG_HID_ZEROPLUS is not set
 # CONFIG_HID_ZYDACRON is not set
@@ -5579,7 +5589,7 @@ CONFIG_USB_TEST=m
 # CONFIG_USB_HSIC_USB4604 is not set
 # CONFIG_USB_LINK_LAYER_TEST is not set
 # CONFIG_USB_CHAOSKEY is not set
-# CONFIG_USB_ONBOARD_HUB is not set
+# CONFIG_USB_ONBOARD_DEV is not set
 
 #
 # USB Physical Layer drivers
@@ -5815,7 +5825,6 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=m
 # CONFIG_LEDS_TRIGGER_PANIC is not set
 # CONFIG_LEDS_TRIGGER_NETDEV is not set
 # CONFIG_LEDS_TRIGGER_PATTERN is not set
-# CONFIG_LEDS_TRIGGER_AUDIO is not set
 # CONFIG_LEDS_TRIGGER_TTY is not set
 
 #
@@ -5877,6 +5886,7 @@ CONFIG_RTC_DRV_PALMAS=m
 # CONFIG_RTC_DRV_S35390A is not set
 # CONFIG_RTC_DRV_FM3130 is not set
 # CONFIG_RTC_DRV_RX8010 is not set
+# CONFIG_RTC_DRV_RX8111 is not set
 # CONFIG_RTC_DRV_RX8581 is not set
 # CONFIG_RTC_DRV_RX8025 is not set
 # CONFIG_RTC_DRV_EM3027 is not set
@@ -6002,6 +6012,7 @@ CONFIG_VIRTIO_MENU=y
 # CONFIG_VIRTIO_BALLOON is not set
 # CONFIG_VIRTIO_INPUT is not set
 # CONFIG_VIRTIO_MMIO is not set
+# CONFIG_VIRTIO_DEBUG is not set
 # CONFIG_VDPA is not set
 CONFIG_VHOST_MENU=y
 # CONFIG_VHOST_NET is not set
@@ -6070,9 +6081,9 @@ CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # end of Clock Source drivers
 
 CONFIG_MAILBOX=y
+# CONFIG_ARM_MHU_V3 is not set
 # CONFIG_PLATFORM_MHU is not set
 CONFIG_OMAP2PLUS_MBOX=m
-CONFIG_OMAP_MBOX_KFIFO_SIZE=256
 # CONFIG_ALTERA_MBOX is not set
 # CONFIG_MAILBOX_TEST is not set
 CONFIG_IOMMU_API=y
@@ -6287,6 +6298,7 @@ CONFIG_KXCJK1013=m
 # CONFIG_AD7091R5 is not set
 # CONFIG_AD7091R8 is not set
 # CONFIG_AD7124 is not set
+# CONFIG_AD7173 is not set
 # CONFIG_AD7192 is not set
 # CONFIG_AD7266 is not set
 # CONFIG_AD7280 is not set
@@ -6303,6 +6315,7 @@ CONFIG_KXCJK1013=m
 # CONFIG_AD7793 is not set
 # CONFIG_AD7887 is not set
 # CONFIG_AD7923 is not set
+# CONFIG_AD7944 is not set
 # CONFIG_AD7949 is not set
 # CONFIG_AD799X is not set
 # CONFIG_AD9467 is not set
@@ -6446,6 +6459,8 @@ CONFIG_IIO_ST_SENSORS_CORE=m
 # CONFIG_AD5593R is not set
 # CONFIG_AD5504 is not set
 # CONFIG_AD5624R_SPI is not set
+# CONFIG_AD9739A is not set
+# CONFIG_ADI_AXI_DAC is not set
 # CONFIG_LTC2688 is not set
 # CONFIG_AD5686_SPI is not set
 # CONFIG_AD5696_I2C is not set
@@ -6590,6 +6605,7 @@ CONFIG_INV_MPU6050_I2C=m
 # CONFIG_AL3010 is not set
 # CONFIG_AL3320A is not set
 # CONFIG_APDS9300 is not set
+# CONFIG_APDS9306 is not set
 # CONFIG_APDS9960 is not set
 # CONFIG_AS73211 is not set
 # CONFIG_BH1750 is not set
@@ -6787,7 +6803,6 @@ CONFIG_BMP280_SPI=m
 
 # CONFIG_NTB is not set
 CONFIG_PWM=y
-CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_DEBUG is not set
 # CONFIG_PWM_ATMEL_TCB is not set
 # CONFIG_PWM_CLK is not set
@@ -7060,7 +7075,7 @@ CONFIG_CRAMFS_BLOCKDEV=y
 # CONFIG_EROFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_NFS_FS=y
-CONFIG_NFS_V2=y
+# CONFIG_NFS_V2 is not set
 CONFIG_NFS_V3=y
 CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=y
@@ -7189,6 +7204,7 @@ CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
 CONFIG_INIT_STACK_ALL_ZERO=y
 # CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
 # CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
+# CONFIG_INIT_MLOCKED_ON_FREE_DEFAULT_ON is not set
 CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
 # CONFIG_ZERO_CALL_USED_REGS is not set
 # end of Memory initialization
@@ -7530,6 +7546,7 @@ CONFIG_ARCH_HAS_SETUP_DMA_OPS=y
 CONFIG_ARCH_HAS_TEARDOWN_DMA_OPS=y
 CONFIG_ARCH_HAS_SYNC_DMA_FOR_DEVICE=y
 CONFIG_ARCH_HAS_SYNC_DMA_FOR_CPU=y
+CONFIG_DMA_NEED_SYNC=y
 CONFIG_DMA_NONCOHERENT_MMAP=y
 CONFIG_ARCH_HAS_DMA_ALLOC=y
 CONFIG_DMA_CMA=y
@@ -7687,6 +7704,7 @@ CONFIG_ARCH_HAS_DEBUG_VIRTUAL=y
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 # CONFIG_DEBUG_KMAP_LOCAL is not set
 # CONFIG_DEBUG_HIGHMEM is not set
+# CONFIG_MEM_ALLOC_PROFILING is not set
 CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_HAVE_ARCH_KASAN_VMALLOC=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
